--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/masked-view": "^0.1.11",
     "axios": "^0.21.4",
     "mobx": "^6.3.3",
+    "mobx-persist-store": "^1.0.4",
     "mobx-react-lite": "^3.2.1",
-    "momen": "^0.0.1-security",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-calendars": "^1.1266.0",
+    "react-native-collapsible": "^1.6.0",
+    "react-native-date-picker": "^4.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^1.13.3",
+    "react-native-reanimated": "^2.2.2",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0",
